iso19139 align. Fix AJV editor height.

--- a/ckanext/jsonschema/fanstatic/customizations.css
+++ b/ckanext/jsonschema/fanstatic/customizations.css
@@ -3,7 +3,10 @@
   display: block;
 }
 
-
+/* AJV editor... */
+#editor-jsonschema-config > div > div.form-group > div {
+  height: 90vh;
+}
 /*
  Save space and higlight borders
 */
